[tool.poetry]
name = "testdatagenerator"
version = "0.1.0"
description = ""
authors = ["Patrick Keogh <pkeogh@activecampaign.com>"]

[tool.poetry.dependencies]
python = "^3.7"
faker = "^4.1.3"
requests = "^2.24.0"
blessings = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
